<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context="com.raihan.stella.activity.RegisterActivity">

    <include layout="@layout/header_general" />

    <LinearLayout
        android:id="@+id/layout_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/content_minus_top_base"
        android:layout_weight=".1"
        android:background="@drawable/back"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/adPhoto"
                            android:layout_width="130dp"
                            android:layout_height="130dp"
                            android:padding="5dp"
                            android:src="@drawable/ic_addpic"
                            app:civ_border_color="@color/colorPrimary"
                            app:civ_border_width="4dp" />

                        <Button
                            android:id="@+id/addiamge"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/colorPrimary"
                            android:padding="@dimen/margin_15"
                            android:text="@string/upload_image"
                            android:textColor="@color/colorWhite" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="@dimen/margin_short"
                            android:background="@drawable/back"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="@dimen/margin_default">

                            <EditText
                                android:id="@+id/input_name"
                                android:layout_width="match_parent"
                                android:layout_height="60dp"
                                android:drawableLeft="@drawable/ic_account"
                                android:drawablePadding="10dp"
                                android:hint="@string/yourname"
                                android:inputType="text"
                                android:paddingLeft="10dp"
                                android:textSize="15dp"
                                android:textStyle="bold" />

                            <EditText
                                android:id="@+id/input_fname"
                                android:layout_width="match_parent"
                                android:layout_height="60dp"
                                android:drawableLeft="@drawable/ic_account"
                                android:drawablePadding="10dp"
                                android:hint="@string/father_name"
                                android:inputType="text"
                                android:paddingLeft="10dp"
                                android:textSize="15dp" />

                            <EditText
                                android:id="@+id/input_mobile"
                                android:layout_width="match_parent"
                                android:layout_height="60dp"
                                android:drawableLeft="@drawable/ic_phone"
                                android:drawablePadding="10dp"
                                android:hint="@string/mobile_no"
                                android:inputType="numberDecimal"
                                android:paddingLeft="10dp"
                                android:textSize="15dp" />

                            <EditText
                                android:id="@+id/input_email"
                                android:layout_width="match_parent"
                                android:layout_height="60dp"
                                android:drawableLeft="@drawable/ic_email"
                                android:drawablePadding="10dp"
                                android:hint="@string/email"
                                android:inputType="textEmailAddress"
                                android:paddingLeft="10dp"
                                android:textSize="15dp" />

                            <EditText
                                android:id="@+id/input_nid"
                                android:layout_width="match_parent"
                                android:layout_height="60dp"
                                android:drawableLeft="@drawable/ic_nid"
                                android:drawablePadding="10dp"
                                android:hint="@string/nid_no"
                                android:inputType="numberDecimal"
                                android:paddingLeft="10dp"
                                android:textSize="15dp" />

                            <EditText
                                android:id="@+id/input_address"
                                android:layout_width="match_parent"
                                android:layout_height="60dp"
                                android:drawableLeft="@drawable/ic_location"
                                android:drawablePadding="10dp"
                                android:hint="@string/address"
                                android:inputType="text"
                                android:paddingLeft="10dp"
                                android:textSize="15dp" />

                            <EditText
                                android:id="@+id/input_password"
                                android:layout_width="match_parent"
                                android:layout_height="60dp"
                                android:drawableLeft="@drawable/ic_password"
                                android:drawablePadding="10dp"
                                android:hint="@string/password"
                                android:inputType="numberPassword"
                                android:paddingLeft="10dp"
                                android:textSize="15dp"
                                android:textStyle="bold"
                                android:visibility="gone" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/margin_short"
                            android:orientation="horizontal"
                            android:padding="@dimen/margin_default"
                            android:weightSum="2">

                            <TextView
                                android:id="@+id/link_login"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_margin="@dimen/margin_short"
                                android:layout_weight="1"
                                android:background="@drawable/bt_background_rounded_red"
                                android:gravity="center"
                                android:padding="@dimen/margin_5"
                                android:text="@string/already_a_member_login"
                                android:textColor="@android:color/white"
                                android:textStyle="bold" />

                            <Button
                                android:id="@+id/btn_register"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_margin="@dimen/margin_short"
                                android:layout_weight="1"
                                android:background="@drawable/bt_background_rounded_green"
                                android:text="@string/register"
                                android:textColor="@android:color/white"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bt_background_rounded_red"
                            android:gravity="center"
                            android:padding="@dimen/margin_default"
                            android:text="@string/developed_by_emon_raihan"
                            android:textColor="@android:color/white"
                            android:textSize="14dp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </ScrollView>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>