<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context="com.raihan.stella.activity.NotificationActivity">

    <include layout="@layout/header_general" />

    <LinearLayout
        android:id="@+id/layout_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/content_minus_top_base"
        android:layout_weight=".1"
        android:background="@drawable/tran"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/margin_short"
                        android:padding="@dimen/margin_default"
                        android:text="@string/notification"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                        android:textColor="@android:color/black"
                        android:textStyle="italic" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/notTV"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="5dp"
                            android:paddingBottom="5dp"
                            android:text="@string/_1_your_january_month_payment_2000_tk_is_completed"
                            android:textColor="@android:color/black"
                            android:textSize="14dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/margin_default"
                            android:text="@string/notice"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                            android:textColor="@android:color/black"
                            android:textStyle="italic" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/messageTV"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="5dp"
                            android:paddingBottom="5dp"
                            android:text="@string/_1_your_january_month_payment_2000_tk_is_completed"
                            android:textColor="@android:color/black"
                            android:textSize="14dp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="5dp"
                            android:text="@string/regards_and_thanks_by"
                            android:textColor="@android:color/black"
                            android:textSize="16dp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:paddingBottom="5dp"
                            android:text="@string/positive_thinkers_unity_authority"
                            android:textColor="@android:color/black"
                            android:textSize="16dp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <ImageView
                        android:id="@+id/bannerIV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scaleType="fitXY"
                        android:layout_gravity="center_horizontal" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="@dimen/margin_short"
                        android:text="@string/developed_by_emon_raihan"
                        android:textColor="@color/black"
                        android:textSize="14dp"
                        android:textStyle="bold" />
                </LinearLayout>
            </ScrollView>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>