<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    tools:context=".activity.DashboardActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_gradient"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:theme="@style/ToolbarColoredBackArrow"
            app:titleTextColor="@color/colorWhite" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/pic"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_user"
                app:civ_border_color="#FFFFFF"
                app:civ_border_width="2dp" />


            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emon_raihan"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/user_mobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user_name"
                android:text="@string/_01516790441"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/user_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user_mobile"
                android:text="@string/example_gmail_com"
                android:textColor="@color/white"
                android:textSize="14sp" />


            <TextView
                android:id="@+id/balTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user_email"
                android:text="@string/_0_00"
                android:textColor="#ffffff" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/balTV"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/prebalTVtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Due Amount"
                    android:textColor="#ffffff"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/prebalTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0.0"
                    android:textColor="#ffffff"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/prebalTVicon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_0_00_u09f3"
                    android:textColor="#ffffff"
                    android:textSize="16sp"
                    android:visibility="gone" />
            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/tran"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <GridView
                        android:id="@+id/menuGridView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/dashboard_margint_left_base"
                        android:gravity="center"
                        android:horizontalSpacing="@dimen/fudtransfer_menu_gridview_hs_base"
                        android:numColumns="3"
                        android:padding="@dimen/padding_5"
                        android:verticalSpacing="@dimen/fudtransfer_menu_gridview_vs_base" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_drawer_menu" />

</androidx.drawerlayout.widget.DrawerLayout>